# nmpc_nav_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: FindACADOS.cmake  Findacados.cmake
config/: nmpc_nav_control.yaml  nmpc_nav_control_acados_models.yaml
include/nmpc_nav_control/: NMPCNavControl.h  NMPCNavControlDiff.h  NMPCNavControlOmni4.h  NMPCNavControlROS.h  NMPCNavControlTric.h  PathDiscretizer.h  utils.h
launch/: nmpc_nav_control.launch  run_nmpc_nav_control.launch  run_nmpc_nav_control_full.launch  run_nmpc_nav_control_generate_libs.launch
scripts/: common.py  generate_acados_libs.py  generate_acados_libs_ros.py  omni4_amr_model.py
scripts/diff/: common.py  diff_amr_model.py  generate_c_code.py
scripts/omni4/: common.py  generate_c_code.py  omni4_amr_model.py
scripts/test_scripts/: acados_sim.py  acados_sim_diff.py  acados_sim_diff_v2.py  acados_sim_tric.py  casadi_sim.py  diff2amr_model.py  export_acados_solver_plugin.py
scripts/test_scripts/diff_kinematic_model/: common.py  diff_amr_model.py  generate_c_code.py
scripts/tric/: common.py  generate_c_code.py  tric_amr_model.py
src/: main.cpp
src/nmpc_nav_control/: NMPCNavControl.cpp  NMPCNavControlDiff.cpp  NMPCNavControlOmni4.cpp  NMPCNavControlROS.cpp  NMPCNavControlTric.cpp  PathDiscretizer.cpp
