<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>nmpc_nav_control</name>
  <version>0.0.0</version>

  <description>
      TODO
  </description>

  <maintainer email="jorge.d.ribeiro@inesctec.pt">Jorge Diogo Ribeiro</maintainer>
  <author email="jorge.d.ribeiro@inesctec.pt">Jorge Diogo Ribeiro</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>itrci_nav</depend>
  <depend>parametric_trajectories_common</depend>
  <depend>Eigen3</depend>

  <export></export>

</package>